--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -24,4 +24,10 @@ $primary-invert: $kaldi-red-invert
 .margin-top-0
   margin-top: 0 !important
 
+#me-title1
+  color: red
+
+#me-title2
+  color: blue
+
 @import "~bulma"
