--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -30,4 +30,9 @@ $primary-invert: $kaldi-red-invert
 #me-title2
   color: blue
 
+.me-social
+  display: block
+  float: left
+  padding-right: 5px
+
 @import "~bulma"
