Add custom color for link title.

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -45,7 +45,11 @@ $me-c-blue: #008FBA
   font-weight: bold
   background-color: $me-c-blue !important
 
+.me-link
+  color: lighten($me-c-blue, 10%) !important
 
+.me-link:hover
+  color: $me-c-blue !important
 
 
 @import "~bulma"
