Re-customize navbar.

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -40,7 +40,7 @@ $me-c-blue: #008FBA
 .navbar-item
   color: white !important
 
-.navbar-item:hover
+.me-navbar-item:hover
   color: white !important
   font-weight: bold
   background-color: $me-c-blue !important
